--- a/views/index.html
+++ b/views/index.html
@@ -23,3 +23,9 @@
 <a ng-href="/#!/Vancouver">Vancouver</a>
 
 <a ng-href="/#!/Winnipeg">Winnipeg</a>
+
+<div id="footer">
+Thanks <a ng-href="http://www.wikipedia.org">Wikipedia</a>
+<br>
+Copyright &copy; 2015 <a ng-href="http://github.com/jsakalys">Julie Sakalys</a>
+</div>
