--- a/views/index.html
+++ b/views/index.html
@@ -4,25 +4,25 @@
 
 <h3>Canada is an amazing country. Learn about its different cities and their history by clicking on the links below!</h3>
 
-<a ng-href="/#!/Calgary">Calgary</a>
+<a ng-href="#!/Calgary">Calgary</a>
 
-<a ng-href="/#!/Halifax,_Nova_Scotia">Halifax</a>
+<a ng-href="#!/Halifax,_Nova_Scotia">Halifax</a>
 
-<a ng-href="/#!/Fredericton">Fredericton</a>
+<a ng-href="#!/Fredericton">Fredericton</a>
 
-<a ng-href="/#!/Montreal">Montreal</a>
+<a ng-href="#!/Montreal">Montreal</a>
 
-<a ng-href="/#!/Ottowa">Ottowa</a>
+<a ng-href="#!/Ottowa">Ottowa</a>
 
-<a ng-href="/#!/Quebec_City">Quebec City</a>
+<a ng-href="#!/Quebec_City">Quebec City</a>
 
-<a ng-href="/#!/Regina,_Saskatchewan">Regina</a>
+<a ng-href="#!/Regina,_Saskatchewan">Regina</a>
 
-<a ng-href="/#!/Toronto">Toronto</a>
+<a ng-href="#!/Toronto">Toronto</a>
 
-<a ng-href="/#!/Vancouver">Vancouver</a>
+<a ng-href="#!/Vancouver">Vancouver</a>
 
-<a ng-href="/#!/Winnipeg">Winnipeg</a>
+<a ng-href="#!/Winnipeg">Winnipeg</a>
 
 <div id="footer">
 Thanks <a ng-href="http://www.wikipedia.org">Wikipedia</a>
